# tensor4

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.py
examples/: CMakeLists.txt  tensor4.sln
examples/alexnet/: AlexNet.cpp  AlexNet.h  Makefile  alexnet.py  alexnet.vcxproj  main.cpp
examples/common/: image_io.h  imagenet_classes.h
examples/densenet169/: DenseNet.cpp  DenseNet.h  Makefile  densenet169.py  densenet169.vcxproj  main.cpp
examples/resnet50/: Makefile  ResNet.cpp  ResNet.h  main.cpp  resnet50.py  resnet50.vcxproj
examples/vgg16/: Makefile  VGG.cpp  VGG.h  main.cpp  vgg16.py  vgg16.vcxproj
include/: tensor4.h
tensor4/: emitters.py  generator.py  trace_parser.py  var_table.py
